crates/ditto-checker/tests/golden/type-errors/unification_error_2.ditto
module Test exports (..)

five = if true then 5 else "5"
